--- a/marcadores/ViewControllers/MatchDetail/MatchDetailTableViewController.xib
+++ b/marcadores/ViewControllers/MatchDetail/MatchDetailTableViewController.xib
@@ -7,18 +7,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MatchDetailTableViewController" customModule="marcadores" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="detailHeaderView" destination="697-NC-Myn" id="mcp-dx-io7"/>
+                <outlet property="headerHeightConstraint" destination="ja5-KC-NRp" id="9h0-bD-Cqh"/>
+                <outlet property="tableView" destination="i5M-Pr-FkT" id="EDe-jT-8zq"/>
+                <outlet property="view" destination="Yrg-l1-MAp" id="IOi-xt-GHt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="Yrg-l1-MAp">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="697-NC-Myn">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                    <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="ja5-KC-NRp"/>
+                    </constraints>
+                </view>
+                <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="i5M-Pr-FkT">
+                    <rect key="frame" x="0.0" y="200" width="375" height="467"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
+                        <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
-                <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
-            </connections>
-        </tableView>
+            <constraints>
+                <constraint firstItem="i5M-Pr-FkT" firstAttribute="leading" secondItem="Yrg-l1-MAp" secondAttribute="leading" id="9FC-a2-jy0"/>
+                <constraint firstItem="697-NC-Myn" firstAttribute="leading" secondItem="Yrg-l1-MAp" secondAttribute="leading" id="C0Q-HB-qjQ"/>
+                <constraint firstAttribute="trailing" secondItem="697-NC-Myn" secondAttribute="trailing" id="HIR-4v-qCD"/>
+                <constraint firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="OGU-ao-a7K"/>
+                <constraint firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="bQJ-AZ-VGj"/>
+                <constraint firstItem="697-NC-Myn" firstAttribute="top" secondItem="Yrg-l1-MAp" secondAttribute="top" id="tX3-1V-g4q"/>
+                <constraint firstItem="i5M-Pr-FkT" firstAttribute="top" secondItem="697-NC-Myn" secondAttribute="bottom" id="vRh-9u-Nvo"/>
+                <constraint firstItem="i5M-Pr-FkT" firstAttribute="top" secondItem="697-NC-Myn" secondAttribute="bottom" id="xmj-m0-zGo"/>
+            </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+            <point key="canvasLocation" x="344" y="-345"/>
+        </view>
     </objects>
 </document>
